fixed vertical scrollbar bug

--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
       padding: 0;
       margin: 0;
       overflow-x: hidden;
+      overflow-y: auto;
+      height: 100%;
     }
 
     .reveal {
@@ -168,7 +170,7 @@
 
 
     .eclipse-shadow {
-      width: 30%;   
+      width: 30%;
       height: 30px;
       margin: 10px auto 0;
 
